[package]
name = "retro-blit"
version = "0.1.8"
edition = "2018"
description = "A library which lets you make games in a feel of old dos games with a screen of 320x200 dimension and 256 colors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
gl_pipelines = { git = "https://github.com/madwareru/gl_pipelines", version = "0.3.0" }
jfa-cpu = { git = "https://github.com/madwareru/jfa-cpu", version = "0.2.0" }
bin-serialization-rs = { git = "https://github.com/madwareru/bin-serialization-rs", version = "0.1.6" }
lyon = "0.17.10"
glam = "0.21.3"
image = "0.24.2"
maplit = "1.0.2"
bytemuck = "1.12"
bumpalo = { version = "3.10.0", features = ["collections"]}
rodio = "0.15.0"
smallvec = "1.10"
egui = "0.19"
