[package]
name = "asteroids-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retro-blit = { path = ".." }
hecs = "0.7.7"
rand = "0.8.5"
flat_spatial = "0.3.7"
bumpalo = { version = "3.10.0", features = ["collections"]}