[package]
name = "dungeon-crawler-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retro-blit = { path = ".." }
jfa-cpu = { git = "https://github.com/madwareru/jfa-cpu", version = "0.2.0" }
hecs = "0.9.0"
smallvec = "1.10.0"
rand = "0.8.5"
image = "0.24.4"
glam = "0.21.3"