[package]
name = "dungeon-crawler-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retro-blit = { path = ".." }
jfa-cpu = { git = "https://github.com/madwareru/jfa-cpu", version = "0.2.1" }
hecs = "0.7.7"
smallvec = "1.10"
rand = "0.8"
image = "0.24"
glam = "0.21"
flat_spatial = "0.3"
bumpalo = { version = "3.10.0", features = ["collections"]}