[package]
name = "portal-map-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retro-blit = { path = ".." }
thiserror = "1.0.31"
notify = "4"
same-file = "1"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
glam = "0.21.3"